[package]
name = "rusty_bit_array"
version = "0.1.0"
authors = ["Philipp Tessenow <philipp@tessenow.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rutie = "0.7.0"
lazy_static = "1.4.0"

[lib]
name = "rusty_bit_array"
crate-type = ["dylib"]
